# arango-schema-validation

./: .clang_complete  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  diff-arango  format  from-arango  to-arango
include/validation/: events_from_slice.hpp  validation.hpp
src/: validation.cpp
tests/: CMakeLists.txt  helper.hpp  small-sample.cpp
tests/test_data/: schema_1.json
